--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "homepage": "https://github.com/bredd9/AutoXV#readme",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.16.0",
+    "sass": "^1.89.0",
+    "sharp": "^0.34.1"
   }
 }
