--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
   },
   "homepage": "https://github.com/bredd9/AutoXV#readme",
   "dependencies": {
+    "bootstrap": "^5.3.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "pg": "^8.16.0",
     "sass": "^1.89.0",
     "sharp": "^0.34.1"
+  },
+  "scss": {
+    "includePaths": [
+      "node_modules"
+    ]
   }
 }
